Expand README with comprehensive project details
Added detailed project overview, requirements, installation instructions, gameplay rules, AI behavior, architecture, features, winning conditions, and known requirements.